test/tests/stages/18_structures/invalid_types/incompatible_types/struct_pointer_param_mismatch.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[4]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s1
        Bool: 0
        List[1]: 
          CMemberDeclaration: 
            TIdentifier: a
            Int: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s2
        Bool: 0
        List[1]: 
          CMemberDeclaration: 
            TIdentifier: a
            Int: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: get_a
        List[1]: 
          TIdentifier: ptr
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CArrow: 
                  TIdentifier: a
                  CVar: 
                    TIdentifier: ptr
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Pointer: 
              Structure: 
                TIdentifier: s1
                Bool: 0
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: arg
                  CCompoundInit: 
                    List[1]: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 1
                          None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: s2
                    Bool: 0
                  None: 
            CS: 
              CReturn: 
                CFunctionCall: 
                  TIdentifier: get_a
                  List[1]: 
                    CAddrOf: 
                      CVar: 
                        TIdentifier: arg
                        None: 
                      None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
